news added 10 mon 2019

--- a/news_inbox_github2.org
+++ b/news_inbox_github2.org
@@ -8,3 +8,30 @@
 
 - 트럼프 등장 '폭력 영상'또 논란.. 이번엔 '킹스맨' 편집 https://news.v.daum.net/v/20191014183027335
 
+[[국감현장]"조민 이름, 조형물 삭제 여부 위해 2.6만명 전수조사" | Daum 뉴스](https://news.v.daum.net/v/20191018111716729)
+[박지원 "검사 10단 윤석열과 설전, 졌지만 이긴거다" | Daum 뉴스](https://news.v.daum.net/v/20191018094800846?d=y)
+[정경심측, 첫재판 "공직자 배우자 전에 한 시민, 인권희생 안돼"(종합) | Daum 뉴스](https://news.v.daum.net/v/20191018121557723?d=y)
+[이미경 "한영외고 인솔교사, 조국 딸 몽골봉사활동 확인" | Daum 뉴스](https://news.v.daum.net/v/20191018121332695?d=y)
+
+
+[조국·윤석열 공언한 '검사장 관용차 폐지', 공염불 그치나 | Daum 뉴스](https://news.v.daum.net/v/20191019070121796?d=y)
+
+
+[[단독]최태원 딸 최민정 美싱크탱크 연구원 됐다.."이런 지정학적 위기 처음" | Daum 뉴스](https://news.v.daum.net/v/20191018110750249?d=y)
+['김성태 딸 계약직 채용부터 비정상적' 잇단 증언.."KT가 지시" | Daum 뉴스](https://news.v.daum.net/v/20191018131141763)
+
+[욕설한 의원이 기록 지워달라 말했다.. 그러자 속기사는 그 말까지 썼다 | Daum 뉴스](https://news.v.daum.net/v/20191019030314247?d=y)
+
+[나경원 "권은희案 위헌"..권은희 "헌법 아닌 입법사항" 반박 | Daum 뉴스](https://news.v.daum.net/v/20191018112643176?d=y)
+[이낙연 거취 놓고 웃음 터진 정무위..총리 비서실장 "12월까진 일정 계속" | Daum 뉴스](https://news.v.daum.net/v/20191018141609658)
+["'싸움은 첫 한방이 중요'..日 총리관저, 對韓 수출규제 주도" | Daum 뉴스](https://news.v.daum.net/v/20191018130423591?d=y)
+[차 1대에 멧돼지 10마리 한꺼번에 치여 죽어 | Daum 뉴스](https://news.v.daum.net/v/20191018083355420?d=y)
+[유니클로 "80년도 더 된 일 어떻게 기억해"..TV 광고에 '부글' | Daum 뉴스](https://news.v.daum.net/v/20191018111524636?d=y)
+
+
+['명성교회 낫 소동' 김충환 전 의원, 기소의견 검찰행 | Daum 뉴스](https://news.v.daum.net/v/20191018134833772?d=y)
+
+['성폭행 주교 항의' 수녀, 수녀회 축출.."바티칸, 정의 부정" | Daum 뉴스](https://news.v.daum.net/v/20191018115528284?d=y)
+
+
+[英 왕세손 부부 비행기, 파키스탄서 악천후로 착륙 실패 후 회항 | Daum 뉴스](https://news.v.daum.net/v/20191018125156282)
